--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             <div class="form-group row">
                 <label for="bookName" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control w-50" id="bookName" placeholder="Book Name">
+                    <input type="text" class="form-control w-50" id="bookName" placeholder="Enter the Book Name">
                 </div>
             </div>
             <br>
             <div class="form-group row">
                 <label for="Author" class="col-sm-2 col-form-label">Author</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control w-50" id="author" placeholder="Author Name">
+                    <input type="text" class="form-control w-50" id="author" placeholder="Enter the Author Name">
                 </div>
             </div>
             <!-- <fieldset class="form-group"> -->
@@ -96,7 +96,7 @@
             <div class="form-group row">
                 <label for="Genre" class="col-sm-2 col-form-label">Genre</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control w-50" id="Genre" placeholder="Genre">
+                    <input type="text" class="form-control w-50" id="Genre" placeholder="Enter the Genre">
                 </div>
             </div>
             <br>
@@ -127,7 +127,7 @@
                         
                         <th >Name</th>
                         <th >Author</th>
-                        <th >Type</th>
+                        <th >Genre</th>
                         <th >Withdraw</th>
                     </tr>
                 </thead>
