--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
              <br>
              <!-- <div class=" "> -->
                 <div class="twobuttons">
-                    <button type="submit" onclick="managedata()" id="addbook"  >ADD BOOK</button>
+                    <button type="submit" id="addbook"  >ADD BOOK</button>
                 <!-- </div> -->
              <!-- <div class=" row py-3"> -->
                  <div class="gotolib">
