--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <body style="background-color: rgb(248, 245, 245);">
-    <nav class="navbar">
+    <nav class="navbar" id="home0">
 
         <!-- <div  class="container-fluid "> -->
         <a class="navbar-brand" href="#" id="nav">Library Management</a>
@@ -36,7 +36,10 @@
 
         <form class="d-flex sbar srch" role="search">
             <div class="form-outline">
-            <input class="form-control me-2" type="search" placeholder="Search books,novels & more..." aria-label="Search" style="box-shadow: 0 3px 3px rgb(24, 131, 133); width: 270px;">
+            <input class="form-control me-2 " type="search" placeholder="Search books,novels & more..." aria-label="Search" style="box-shadow: 0px  2px 10px rgb(24, 131, 133); ;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+              </svg>
             </div>
 
 
@@ -57,7 +60,7 @@
 
         </form>
         </div>
-    </navbar>
+    </navbar><br>
 
     <div class="firstpage" id="home"></div>
     <div id="message"></div>
@@ -68,7 +71,7 @@
                 <div class="maincontainer">
 
                     <div class="enterbook">
-                        <h3 class="heading">Please Enter the Book details</h3>
+                        <h3 class="heading" >Please Enter the Book details..</h3>
                     </div>
                     <!-- <img src="2.png" alt="" id="img" srcset=""> -->
                 </div>
@@ -93,7 +96,7 @@
                         </div>
                     </div>
                     <!-- <fieldset class="form-group"> -->
-                    <br><br>
+                    <br><br><br><br>
                     <div class="authornameandinp mmm">
                         <label for="Genre" class="col-sm-2  col-md-4 col-form-label form-group" style="padding-left :10px;">Genre:</label>
                         <div class="col-sm-10 col-md-8">
@@ -109,7 +112,7 @@
                 </div>
 
 
-                <br>
+                <br><br>
                 <!-- <div class=" "> -->
                 <div class="twobuttons">
                     <button type="submit" id="addbook" class="btn btn-color add-button"
@@ -132,7 +135,7 @@
 
 
 
-        <section id="footer">
+        <!-- <section id="footer">
             <div class="roww">
                 <div class="col-md-3 col-sm-3 padding-0">
                     <img src="Group20.png" style="position: relative; bottom:0" width="100%" height="200px">
@@ -149,9 +152,9 @@
             </div>
 
 
-        </section>
+        </section> -->
 
-        <br><br>
+        <br><br><br><br><br><br><br><br><br>
         <div class="secondpage">
             <div id="table">
                 <div class="headinglibrary">
@@ -159,11 +162,11 @@
                 </div>
                 <a href=""></a>
                 <div class="filtercontainer">
-                    <h4 id="filtering filter"> Filter Books </h4>
+                    <h6 id="filtering filter"> Filter Books: </h6>
                     <!-- <h4>-></h4> -->
                     <input type="text" id="myInput" placeholder="Press any key to filter" onkeyup="filter()"></input>
 
-                    <a id="homeicon" href="#home">
+                    <a id="homeicon" href="#home0">
                         <i class="fa fa-home fa-2x"></i></a>
                 </div>
                 <!-- <h4 id="filter">filter</h4>
