--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
         </div>
             <a href=""></a>
             <div class="filtercontainer">
-                <h4 id="filtering filter" > Search Books: </h4>
+                <h4 id="filtering filter" class="h4" > Search Books: </h4>
                 <!-- <h4>-></h4> -->
-       <input type="text" id="myInput" placeholder="Search your book" onkeyup="filter()" ></input>
+       <input type="text" id="myInput" placeholder="Search.." onkeyup="filter()" ></input>
 
 
 
@@ -173,9 +173,9 @@
      
     </select> 
     <button id="Filterremoving" type="button" onclick="window.location.reload()" >Remove Filter</button>
-<!--     
+  
        <a id="homeicon" href="#home">
-           <i class="fa fa-home fa-2x" ></i></a> -->
+           <i class="fa fa-home fa-2x" ></i></a>
         </div>
             <!-- <h4 id="filter">filter</h4>
             <span class="material-symbols-outlined" id="fil">
@@ -211,10 +211,10 @@
             <div class="col-md-3 col-sm-3 padding-0">
                 <img src="Group20.png" style="position: relative; bottom:0" width="100%" height="200px">
             </div>
-            <div class="col-md-3 col-sm-3 padding-0">
+            <div class="col-md-3 col-sm-3 padding-0 i00">
                 <img src="Group20.png" style="position: relative; bottom:0" width="100%" height="200px">
             </div>
-             <div class="col-md-3 col-sm-3 padding-0">
+             <div class="col-md-3 col-sm-3 padding-0 i0">
                 <img src="Group20.png" style="position: relative; bottom:0" width="100%" height="200px"> 
             </div>
         </div>
