--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <body style="background-color: rgb(248, 245, 245);">
-    <nav class="navbar">
+    <nav class="navbar" id="home0">
 
         <!-- <div  class="container-fluid "> -->
             <a class="navbar-brand" href="#" id="nav">Library Management</a>
@@ -174,7 +174,7 @@
     </select> 
     <button id="Filterremoving" type="button" onclick="window.location.reload()" >Remove Filter</button>
   
-       <a id="homeicon" href="#home">
+       <a id="homeicon" href="#home0">
            <i class="fa fa-home fa-2x" ></i></a>
         </div>
             <!-- <h4 id="filter">filter</h4>
