--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 
 
-<body style="background-color: rgb(248, 245, 245);">
-    <nav class="navbar" id="home0">
+        <body style="background-color: rgb(248, 245, 245);" >
+    <nav class="navbar" >
 
         <!-- <div  class="container-fluid "> -->
             <a class="navbar-brand" href="#" id="nav">Library Management</a>
-            <div class="imgbook">
+            <div class="imgbook" >
                 <img src="./BOOKCLUB.png" alt="" srcset="" id="bookimg"></div>
             
 
@@ -46,8 +46,8 @@
             </div>
         </div>
     </nav>
-    <navbar>
-        <div class="imggbook">
+    <navbar id="home0">
+        <div class="imggbook" >
             <img src="./BOOKCLUB.png" alt="" srcset="" id="bookimg"></div>
         
         <a class="navb" href="#" id="nav">Library Management</a>
