--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-sm-10 col-md-8">
                     <input type="text" class="selectbox" id="bookName" placeholder="Enter here" style="padding-left :10px;">
                     </div>
-                
+                </form>
             </div>
             
         </div>
