--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
             </div>
         </div>
     </section>
+    <div class="dark-mode-toggle" style="background-color:#fff; border: solid black 2px;">
+    <button onclick="myFunction()" style="border: 0px; top: 7px; left: 5px; position:relative; background-color: #fff;">
+    <img src="moon-icon-8.png" style="height: 20px; width: 20px;"></button></div>
+    <script>
+        function myFunction() {
+           var element = document.body;
+           element.classList.toggle("dark-mode");
+        }
+        </script>
+        
+</script>
 </body>
 
     
